make embedded videos not bleed out fix #1035

--- a/Zero-K.info/Styles/style.css
+++ b/Zero-K.info/Styles/style.css
@@ -546,3 +546,7 @@ div#busy
 .grid .row_selected {
 	background-color: #0000cd;
 }
+
+.video-container {
+    max-width: 100%;
+}
